--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,22 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+
+    <!-- 系统主题样式 -->
+    <style name="AppTheme" parent="QsTheme">
+        <!--actionbar底色-->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <!--不使用系统的toolbar-->
+        <item name="android:windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+       <!-- <item name="android:windowAnimationStyle">@style/SugarWindowAnimationStyle</item>-->
+        <!--test-->
+        <item name="android:windowBackground">@color/color_white</item>
+        <item name="android:windowIsTranslucent">true</item>
     </style>
 
 </resources>
