--- a/app/src/main/res/drawable/btn_orange_enable_false.xml
+++ b/app/src/main/res/drawable/btn_orange_enable_false.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- 填充的颜色 -->
-    <solid android:color="@color/btn_orange3" />
+    <solid android:color="@color/color_gray_c" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="@dimen/dp_5" />
