--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,6 +29,7 @@
         android:background="@null"
         android:hint="请输入手机号"
         android:imeOptions="actionDone"
+        android:inputType="number"
         android:maxLines="1"
         android:singleLine="true"
         android:textColor="@color/colorBlack"
