--- a/app/src/main/res/layout/title_common.xml
+++ b/app/src/main/res/layout/title_common.xml
@@ -1,29 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--actionBar-->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--actionBar-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/actionbar_size"
     android:background="@color/color_white"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@id/bar_left"
+        style="@style/titlebar_btn">
+
+        <ImageView
+            android:layout_width="@dimen/title_icon_size"
+            android:layout_height="@dimen/title_icon_size"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/ic_back" />
+    </RelativeLayout>
+
     <TextView
-        android:layout_centerVertical="true"
-        android:id="@+id/tv_title"
+        android:id="@id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:gravity="center"
         android:singleLine="true"
-        android:text="@string/app_name"
+        android:text=""
         android:textColor="@color/colorBlack"
-        android:textSize="@dimen/font_size_title"/>
+        android:textSize="@dimen/font_size_title" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_alignParentBottom="true"
-        android:background="@color/color_red"/>
+        android:background="@color/color_gray" />
 
 </RelativeLayout>
 
