--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorBlack">#000000</color>
     <color name="color_white">#ffffff</color>
     <color name="color_red">#DE2B2B</color>
+    <color name="transparent">#00000000</color>
 
 
     <!--gray color-->
@@ -17,6 +18,7 @@
     <color name="color_gray_d">#D8D8D8</color>
     <color name="color_gray_e">#EEEFEF</color>
     <color name="color_gray_f">#F1F1F1</color>
+    <color name="color_gray_9">#999999</color>
 
 
     <color name="color_576b95">#576b95</color>
@@ -25,5 +27,10 @@
     <color name="btn_orange1">#ff4e00</color>
     <color name="btn_orange2">#ee4900</color>
     <color name="btn_orange3">#d74200</color>
+
+    <!-- 统一上下分割线-->
+    <color name="orientation_divider">#bbbbbb</color>
+
+    <color name="font_tab">#d8302f</color>
 
 </resources>
