--- a/app/src/main/res/layout/fragment_main_four.xml
+++ b/app/src/main/res/layout/fragment_main_four.xml
@@ -1,13 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_common"
     android:orientation="vertical">
 
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="four" />
+        android:orientation="vertical">
 
-</LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:id="@+id/me_user_layout"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:background="@color/btn_orange1"
+                android:descendantFocusability="blocksDescendants">
+
+                <com.leqian.bao.view.imageview.CircleImageView
+                    android:id="@+id/me_user_photo"
+                    android:layout_width="@dimen/dp_60"
+                    android:layout_height="@dimen/dp_60"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/dp_30"
+                    android:src="@mipmap/me_default_icon"
+                    app:border_color="@color/white"
+                    app:border_width="@dimen/dp_2" />
+
+                <TextView
+                    android:id="@id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/me_user_photo"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:text="name"
+                    android:textColor="@color/color_white"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/tv_zfb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_name"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/dp_3"
+                    android:text="支付宝账号"
+                    android:textColor="@color/color_white"
+                    android:textSize="10sp" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                style="@style/roundconor"
+                android:layout_below="@id/me_user_layout"
+                android:layout_marginTop="-20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/ll_today_charge"
+                    style="@style/ripple_fg"
+                    android:layout_width="@dimen/dimens_0"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/dp_10"
+                    android:paddingBottom="@dimen/dp_10">
+
+                    <TextView
+                        android:id="@+id/tv_today_charge"
+                        style="@style/small_text"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/small_text"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:text="今日计费次数" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_yesterday_charge"
+                    style="@style/ripple_fg"
+                    android:layout_width="@dimen/dimens_0"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/dp_10"
+                    android:paddingBottom="@dimen/dp_10">
+
+                    <TextView
+                        android:id="@+id/tv_yesterday_charge"
+                        style="@style/small_text"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/small_text"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:text="昨日计费次数" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_month_charge"
+                    style="@style/ripple_fg"
+                    android:layout_width="@dimen/dimens_0"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/dp_10"
+                    android:paddingBottom="@dimen/dp_10">
+
+                    <TextView
+                        android:id="@+id/tv_month_charge"
+                        style="@style/small_text"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/small_text"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:text="本月计费次数" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@id/content"
+            style="@style/roundconor"
+            android:layout_marginTop="@dimen/dp_10"
+            android:orientation="vertical" />
+    </LinearLayout>
+
+
+</ScrollView>
