--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="@dimen/dp_4"
-                android:text="消息"
+                android:text="首页"
                 android:textColor="@color/color_gray_9"
                 android:textSize="11sp" />
 
@@ -94,7 +94,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="@dimen/dp_4"
-                android:text="圈子"
+                android:text="团队"
                 android:textColor="@color/color_gray_9"
                 android:textSize="11sp" />
 
@@ -139,7 +139,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="@dimen/dp_4"
-                android:text="服务"
+                android:text="排行"
                 android:textColor="@color/color_gray_9"
                 android:textSize="11sp" />
 
