--- a/app/src/main/res/layout/fragment_main_four.xml
+++ b/app/src/main/res/layout/fragment_main_four.xml
@@ -154,6 +154,7 @@
             android:id="@id/content"
             style="@style/roundconor"
             android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginBottom="@dimen/dp_18"
             android:orientation="vertical" />
     </LinearLayout>
 
