--- a/app/src/main/res/layout/title_common.xml
+++ b/app/src/main/res/layout/title_common.xml
@@ -29,6 +29,22 @@
         android:textColor="@color/color_white"
         android:textSize="@dimen/font_size_title" />
 
+
+    <RelativeLayout
+        android:id="@id/bar_right"
+        style="@style/titlebar_btn"
+        android:layout_alignParentEnd="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="完成"
+            android:textColor="@color/color_white"
+            android:textSize="16sp" />
+    </RelativeLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
