排行模块添加列表

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,7 @@
 
     <!-- 统一上下分割线-->
     <color name="orientation_divider">#bbbbbb</color>
+    <color name="content_divider">#dfdfdf</color>
 
     <color name="font_tab">#d8302f</color>
 
