--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -10,4 +10,5 @@
     <item name="listView" type="id" />
     <item name="iv_image" type="id" />
     <item name="bar_right" type="id" />
+    <item name="refreshView" type="id" />
 </resources>
