--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -102,4 +102,24 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+
+    <!-- 下拉刷新ListView的样式 -->
+    <style name="list_view_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:cacheColorHint">#00000000</item>
+        <!-- 取消listview的上边和下边有黑色的阴影 -->
+        <item name="android:fadingEdge">none</item>
+        <!-- 取消默认会显示选中listview的item底色 -->
+        <item name="android:listSelector">#00000000</item>
+        <item name="android:scrollbars">none</item>
+    </style>
+
+    <style name="lv_default_style" parent="@style/list_view_style">
+        <item name="android:divider">@color/content_divider</item>
+        <item name="android:dividerHeight">1px</item>
+        <item name="android:background">@color/bg_common</item>
+    </style>
+
 </resources>
