--- a/app/src/main/res/layout/fragment_main_three.xml
+++ b/app/src/main/res/layout/fragment_main_three.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@id/refreshView"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/title_main_ranking" />
 
-    <ListView
-        android:id="@id/listView"
-        style="@style/lv_default_style"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@id/refreshView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/bg_common">
 
-</com.scwang.smartrefresh.layout.SmartRefreshLayout>
+        <ListView
+            android:id="@id/listView"
+            style="@style/lv_default_style"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
+
+</LinearLayout>
