--- a/app/src/main/res/layout/title_common.xml
+++ b/app/src/main/res/layout/title_common.xml
@@ -33,7 +33,8 @@
     <RelativeLayout
         android:id="@id/bar_right"
         style="@style/titlebar_btn"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
