--- a/app/src/main/res/layout/fragment_main_first.xml
+++ b/app/src/main/res/layout/fragment_main_first.xml
@@ -7,4 +7,17 @@
     <include layout="@layout/title_common" />
 
 
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@id/refreshView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_common">
+
+        <ListView
+            android:id="@id/listView"
+            style="@style/lv_default_style"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 </LinearLayout>
