--- a/app/src/main/res/layout/item_lv_resource_link.xml
+++ b/app/src/main/res/layout/item_lv_resource_link.xml
@@ -2,14 +2,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
+    android:background="@color/color_white"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tvTitle"
         style="@style/small_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1" />
+        android:layout_marginLeft="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_10"
+        android:text="视频"
+        android:textColor="@color/colorBlack"
+        android:textSize="18sp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            style="@style/small_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:background="@drawable/edit_bg"
+            android:padding="@dimen/dp_2"
+            android:text="视频裂变"
+            android:textColor="@color/theme"
+            android:textSize="12sp" />
+
+
+        <ImageButton
+            android:id="@+id/iv_copy_link"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="@dimen/dp_15"
+            android:background="@mipmap/news_copy" />
+
+        <ImageButton
+            android:id="@+id/iv_add_link"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="@dimen/dp_25"
+            android:layout_toLeftOf="@id/iv_copy_link"
+            android:background="@mipmap/news_making" />
+
+    </RelativeLayout>
 
 </LinearLayout>
