--- a/app/src/main/res/layout/title_main_ranking.xml
+++ b/app/src/main/res/layout/title_main_ranking.xml
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?><!--actionBar-->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/toolbar_size"
     android:background="@color/theme"
+    android:gravity="center"
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@id/tv_title"
+    <RadioGroup
+        android:id="@id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:gravity="center"
-        android:singleLine="true"
-        android:text="排行"
-        android:textColor="@color/color_white"
-        android:textSize="@dimen/font_size_title" />
+        android:layout_margin="@dimen/dp_8"
+        android:background="@drawable/edit_bg"
+        android:orientation="horizontal">
 
+        <RadioButton
+            android:id="@id/radio_button1"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:button="@null"
+            android:gravity="center"
+            android:text="团员排行"
+            android:textColor="@color/theme"
+            android:textSize="14sp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_alignParentBottom="true"
-        android:background="@color/color_gray"
-        android:visibility="gone" />
+        <RadioButton
+            android:id="@id/radio_button2"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:button="@null"
+            android:gravity="center"
+            android:text="部门排行"
+            android:textColor="@color/color_gray"
+            android:textSize="14sp" />
+    </RadioGroup>
 
-</RelativeLayout>
+</LinearLayout>
 
