--- a/app/src/main/res/layout/fragment_main_four.xml
+++ b/app/src/main/res/layout/fragment_main_four.xml
@@ -55,6 +55,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/tv_zfb"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="支付宝账号"
