--- a/app/src/main/res/layout/item_lv_video_list.xml
+++ b/app/src/main/res/layout/item_lv_video_list.xml
@@ -1,69 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:background="@color/white"
+    android:layout_height="wrap_content"
+    android:background="@color/bg_common"
     android:gravity="center_vertical"
-    android:minHeight="60dp"
-    android:orientation="horizontal"
-    android:paddingStart="@dimen/dp_15"
-    android:paddingEnd="@dimen/dp_15">
+    android:minHeight="90dp"
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_ranking"
-        style="@style/small_text"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@mipmap/no_one_crown"
-        android:gravity="center"
-        android:textColor="@color/black" />
-
-    <ImageView
-        android:id="@id/iv_image"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginLeft="@dimen/dp_25"
-        android:src="@mipmap/team_director" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dp_10"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@id/tv_title"
-            style="@style/small_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="名字"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@id/tv_desc"
-            style="@style/small_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_3"
-            android:text="团队"
-            android:textColor="@color/color_gray_6"
-            android:textSize="12sp"
-            android:visibility="visible" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_count"
-        android:layout_width="0dp"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_18"
-        android:layout_weight="1"
-        android:drawableRight="@mipmap/right_back_black"
-        android:drawablePadding="@dimen/dp_30"
-        android:gravity="end"
-        android:text="1111"
-        android:textColor="@color/color_gray"
-        android:textSize="14sp" />
+        android:layout_marginStart="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:background="@color/white"
+        app:cardCornerRadius="@dimen/dp_10"
+        app:cardElevation="@null">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/dp_15">
+
+            <ImageView
+                android:id="@id/check_box"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/industry_cb_normal"
+                android:button="@null" />
+
+            <ImageView
+                android:id="@id/iv_image"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:src="@mipmap/image_defalut" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@id/tv_title"
+                    style="@style/small_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="title"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@id/tv_desc"
+                    style="@style/small_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_3"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="desc"
+                    android:textColor="@color/color_gray_6"
+                    android:textSize="14sp"
+                    android:visibility="visible" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_3">
+
+                    <TextView
+                        style="@style/small_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="视频裂变"
+                        android:textColor="@color/theme"
+                        android:textSize="12sp"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/tv_check_state"
+                        style="@style/small_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/dp_18"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="审核状态"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="12sp"
+                        android:visibility="visible" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+
 </LinearLayout>
