--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -21,4 +21,6 @@
     <item name="radio_button1" type="id" />
     <item name="radio_button2" type="id" />
     <item name="check_box" type="id" />
+
+    <item name="image_button" type="id" />
 </resources>
