--- a/app/src/main/res/layout/title_common.xml
+++ b/app/src/main/res/layout/title_common.xml
@@ -27,7 +27,7 @@
         android:singleLine="true"
         android:text=""
         android:textColor="@color/color_white"
-        android:textSize="@dimen/font_size_title" />
+        android:textSize="16sp" />
 
 
     <RelativeLayout
