封面列表页面 下拉刷新，更新数据

--- a/app/src/main/res/layout/item_lv_video_list.xml
+++ b/app/src/main/res/layout/item_lv_video_list.xml
@@ -39,6 +39,7 @@
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:layout_marginLeft="@dimen/dp_15"
+                android:scaleType="centerCrop"
                 android:src="@mipmap/image_defalut" />
 
             <LinearLayout
