团队管理页面

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -23,4 +23,6 @@
     <item name="check_box" type="id" />
 
     <item name="image_button" type="id" />
+
+    <item name="et_content" type="id" />
 </resources>
