--- a/app/src/main/res/drawable/bg_gray_line.xml
+++ b/app/src/main/res/drawable/bg_gray_line.xml
@@ -3,8 +3,10 @@
 
     <corners android:radius="@dimen/dp_4" />
 
-    <solid android:color="@color/content_divider" />
+    <solid android:color="@color/white" />
 
-
+    <stroke
+        android:width="1px"
+        android:color="@color/orientation_divider" />
 
 </shape>
