--- a/app/src/main/res/layout/activity_click_trend.xml
+++ b/app/src/main/res/layout/activity_click_trend.xml
@@ -2,13 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/small_text"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_15"
-        android:text="趋势" />
+        android:layout_marginTop="@dimen/dp_10"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/tv_today_count"
+            style="@style/small_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_15"
+            android:drawableLeft="@mipmap/tendency_column"
+            android:drawablePadding="@dimen/dp_5"
+            android:text="今日计费明细趋势"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_18"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_18"
+        android:background="@drawable/bg_gray">
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/lineChart"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+    </LinearLayout>
 </LinearLayout>
