--- a/app/src/main/res/drawable/bg_gray.xml
+++ b/app/src/main/res/drawable/bg_gray.xml
@@ -3,7 +3,7 @@
 
     <corners android:radius="@dimen/dp_4" />
 
-    <solid android:color="@color/content_divider" />
+    <solid android:color="@color/color_gray_f" />
 
 
 
